k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: errandbit
  labels:
    name: errandbit
    environment: production
